--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ freezegun==1.1.0
 future==0.18.2
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-numpy==1.26.0
+numpy>=1.25,<1.26
 openpyxl==3.1.5
 pandas==2.2.3
 passlib==1.7.4
