--- a/.render.yaml
+++ b/.render.yaml
@@ -6,3 +6,7 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn portfolio.wsgi:application
     runtime: python-3.11.9
+
+buildCommand: |
+  pip install -r requirements.txt
+  python manage.py collectstatic --noinput
